# cpp_project_with_python_bindings

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CODEOWNERS  README.md  authors.html  changelog.html  contribute.html  environment.yml  genindex.html  get_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  towncrier.toml
.github/workflows/: ci.yml
_modules/: __init__.html  index.html  nanobind_example_ext.html
_sources/: contribute.rst.txt  index.rst.txt  reference.rst.txt
_sources/api/c++/: library_root.rst.txt
_sources/api/python/my_package/__init__/: index.rst.txt
_sources/api/python/my_package/nanobind_example_ext/: index.rst.txt
_static/: documentation_options.js
api/c++/: library_root.html
api/python/: index.html
api/python/my_package/__init__/: index.html
api/python/my_package/nanobind_example_ext/: index.html
cmake/: BuildType.cmake  RPATHHandling.cmake
docs/: Makefile
docs/source/: Doxyfile  authors.rst  changelog.rst  conf.py  get_started.rst
docs/source/_templates/: index.rst
docs/source/api/python/: index.rst
src/: nanobind_example_ext.cpp
src/my_package/: __init__.py
tests/: test_add.py
